--- a/develop.html
+++ b/develop.html
@@ -6,10 +6,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The computer</title>
+    <link rel="stylesheet" href="link rel=" preconnect href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <section class="background">
+        <div class="d">
+            <h1>The computer</h1>
+            <h1>How it was been <span class="v">invanted</span> </h1>
+            <h2>Hestory of <span class="v">computer</span> </h2>
+            <p class="c"> 1988–2001
+                Although web design has a fairly recent history. It can be linked to other areas such as graphic design,
+                user
+                experience, and multimedia arts, but is more aptly seen from a technological standpoint
+            </p>
+            <a class="l" target="blank" href="https://en.wikipedia.org/wiki/Computer">LEARN HERE</a>
+
+        </div>
+        <div class="e">
+            <img src="PngItem_1451255.png" alt="">
+        </div>
+
+    </section>
 
 </body>
 
