--- a/develop.html
+++ b/develop.html
@@ -31,7 +31,104 @@
         </div>
 
     </section>
+    <section class="lo">
+        <div>
+            <img src="re.jpg" alt="">
+        </div>
+        <div>
+            <h1 class="new">
+                Who is Charles Babbag
+            </h1>
+            <p class="re">Charles Babbage, <span class="che">(born December 26, 1791, London, England—died October 18,
+                    1871, London)</span>,<br>
+                In 1812 Babbage helped found the Analytical Society, whose object was to introduce developments from the
+                European continent into English mathematics. In 1816 he was elected a fellow of the Royal Society of
+                London. He was instrumental in founding the Royal Astronomical (1820) and Statistical (1834) societies.
 
+                Babbage, Charles
+                Babbage, Charles
+                Charles Babbage.
+                Wellcome Library, London (CC BY 4.0)
+                The idea of mechanically calculating mathematical tables first came to Babbage in 1812 or 1813. Later he
+                made a small calculator that could perform certain mathematical computations to eight decimals. Then in
+                1823 he obtained government support for the design of a projected machine, the Difference Engine, with a
+                20-decimal capacity. The Difference Engine was a digital device: it operated on discrete digits rather
+                than smooth quantities, and the digits were decimal (0–9), represented by positions on toothed wheels
+                rather than binary digits (“bits”). When one of the toothed wheels turned from nine to zero, it caused
+                the next wheel to advance one position, carrying the digit. Like modern computers, the Difference Engine
+                had storage—that is, a place where data could be held temporarily for later processing. Its construction
+                required the development of mechanical engineering techniques, to which Babbage of necessity devoted
+                himself. In the meantime (1828–39), he served as Lucasian Professor of Mathematics at the University of
+                Cambridge. However, the full engine, designed to be room-sized, was never built, at least not by
+                Babbage. All design and construction ceased in 1833, when Joseph Clement, the machinist responsible for
+                actually building the machine, refused to continue unless he was prepaid.
+
+                Difference Engine
+                Difference Engine
+                The completed portion of Charles Babbage's Difference Engine, 1832. This advanced calculator was
+                intended to produce logarithm tables used in navigation. The value of numbers was represented by the
+                positions of the toothed wheels marked with decimal numbers.
+                Science Museum London
+                Listen to Walter Isaacson's discussion about Ada Lovelace's life and impact on scientific computing
+                Listen to Walter Isaacson's discussion about Ada Lovelace's life and impact on scientific computing
+                Walter Isaacson discussing the life and impact of Ada Lovelace.
+                © World Science Festival (A Britannica Publishing Partner)
+                See all videos for this article
+                During the mid-1830s Babbage developed plans for the Analytical Engine, the forerunner of the modern
+                digital computer. In that device he envisioned the capability of performing any arithmetical operation
+                on the basis of instructions from punched cards, a memory unit in which to store numbers, sequential
+                control, and most of the other basic elements of the present-day computer. As with the Difference
+                Engine, the project was far more complex than anything theretofore built. The memory unit was to be
+                large enough to hold 1,000 50-digit numbers; this was larger than the storage capacity of any computer
+                built before 1960. The machine was to be steam-driven and run by one attendant.
+
+                Get a Britannica Premium subscription and gain access to exclusive content.
+                Subscribe Now
+                In 1843 Babbage’s friend mathematician Ada Lovelace translated a French paper about the Analytical
+                Engine and, in her own annotations, published how it could perform a sequence of calculations, the first
+                computer program. The Analytical Engine, however, was never completed. Babbage’s design was forgotten
+                until his unpublished notebooks were discovered in 1937. In 1991 British scientists built Difference
+                Engine No. 2—accurate to 31 digits—to Babbage’s specifications, and in 2000 the printer for the
+                Difference Engine was also built.
+
+                Babbage made notable contributions in other areas as well. He assisted in establishing the modern postal
+                system in England and compiled the first reliable actuarial tables. He also invented a type of
+                speedometer and the locomotive cowcatcher.
+
+                Babbage, Charles
+                Babbage, Charles
+                Charles Babbage, engraving from 1871.
+                Library of Congress, Washington, D.C. (file no. LC-USZ62-66023)
+                The Editors of Encyclopaedia Britannica
+                This article was most recently revised and updated by Erik Gregersen, Senior Editor.
+                Learn More in these related Britannica articles:
+                International Space Station
+                history of technology: Automation and the computer
+                …the English mathematician and inventor Charles Babbage in the 1830s. The essence of this machine is the
+                use of electronic devices to record electric impulses coded in the very simple binary system, using only
+                two symbols, but other devices such as punched cards and magnetic tape for storing and feeding…
+                computer
+                computer: The Analytical Engine
+                …working on the Difference Engine, Babbage began to imagine ways to improve it. Chiefly he thought about
+                generalizing its operation so that it could perform other kinds of calculations. By the time the funding
+                had run out in 1833, he had conceived of something far more revolutionary: a general-purpose computing…
+                Zeno's paradox
+                history of logic: Leibniz
+                …others was followed up by Charles Babbage, William Stanley Jevons, and Charles Sanders Peirce and his
+                student Allan Marquand in the 19th century, and with wide success on modern computers after World War
+                II.…
+                newsletter icon
+                HISTORY AT YOUR FINGERTIPS
+                Sign up here to see what happened On This Day, every day in your inbox!
+                Email address
+                Email address
+                By signing up, you agree to our Privacy Notice.
+
+                Learn More!
+
+
+        </div>
+    </section>
 </body>
 
 </html>
