--- a/develop.html
+++ b/develop.html
@@ -80,15 +80,21 @@
 
                     Learn More!
             </div>
+
         </div>
 
     </section>
 
+    <h1 id="reo">THE EVULAION</h1>
+
+
 
     <section class="color">
-        <div class="colam">
+
+        <div class="colam ">
             <div id="img1">
                 <img src="img/re.png" alt="">
+
             </div>
             <div id="img2">
                 <img src="img/971-removebg-preview.png" alt="">
@@ -96,6 +102,46 @@
 
         </div>
     </section>
+    <section class="loos">
+        <div id="loos1">
+            <p>
+                A computer is a machine that can be programmed to carry out sequences of arithmetic or logical
+                operations automatically. Modern computers can perform generic sets of operations known as programs.
+                These programs enable computers to perform a wide range of tasks. A computer system is a "complete"
+                computer that includes the hardware, operating system (main software), and peripheral equipment needed
+                and used for "full" operation. This term may also refer to a group of computers that are linked and
+                function together, such as a computer network or computer cluster.
+
+                A broad range of industrial and consumer products use computers as control systems. Simple
+                special-purpose devices like microwave ovens and remote controls are included, as are factory devices
+                like industrial robots and computer-aided design, as well as general-purpose devices like personal
+                computers and mobile devices like smartphones. Computers power the Internet, which links hundreds of
+                millions of other computers and users.
+            </p>
+            <a class="l" target="blank" href="https://en.wikipedia.org/wiki/History_of_personal_computers">THE OLD
+                ONE</a>
+        </div>
+        <div id="loos2">
+            <p>
+                Information technology (IT) is the use of computers to store or retrieve data[1] and information. IT is
+                typically used within the context of business operations as opposed to personal or entertainment
+                technologies.[2] IT is considered to be a subset of information and communications technology (ICT). An
+                information technology system (IT system) is generally an information system, a communications system,
+                or, more specifically speaking, a computer system – including all hardware, software, and peripheral
+                equipment – operated by a limited group of IT users.
+
+                Humans have been storing, retrieving, manipulating, and communicating information since the Sumerians in
+                Mesopotamia developed writing in about 3000 BC.[3] However, the term information technology in its
+                modern sense first appeared in a 1958 article published in the Harvard Business Review; authors Harold
+                J. Leavitt and Thomas L. Whisler commented that "the new technology does not yet have a single
+                established name. We shall call it information technology (IT)." Their definition consists of three
+                categories: techniques for processing, the application of statistical and mathematical methods to
+                decision-making, and the simulation of higher-order thinking through computer programs.[4]
+            </p>
+            <a class="l" target="blank" href="https://en.wikipedia.org/wiki/Computer">THE NEW ONE</a>
+        </div>
+    </section>
+
 </body>
 
 </html>
